# OBD-II_MQTT_HoloLens

./: .gitignore  LICENSE  README.md
HoloLens/Assets/: WSATestCertificate.pfx
HoloLens/Assets/Materials/: HolographicButtonCheckVehicleCodes.mat  HolographicButtonEngineModel.mat  HolographicButtonOilTempature.mat  HolographicButtonRPM.mat  HolographicButtonRepairReport.mat  HolographicButtonSetting.mat  HolographicButtonVehicleInfo.mat  MyHolographicBackPlate.mat  MyHolographicBackPlateGrabbedState.mat  MyHolographicButtonBackPlate.mat
HoloLens/Assets/Prefabs/: car-engine-simplified.fbx
HoloLens/Assets/Prefabs/car-engine-simplified/: Material.001.mat  Material.003.mat  Material.004.mat  Material.005.mat  Material.mat
HoloLens/Assets/Scenes/: MainScene.unity
HoloLens/Assets/Scripts/: MainMenuManager.cs  MqttManager.cs  SettingMenu.cs  Telemetry.cs  TextInputManager.cs  TextInputObject.cs
HoloLens/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Sphere_HighLevelApp/: CMakeLists.txt  README.md  app_manifest.json  common.c  common.h  main.c  mqtt_utilities.c  mqtt_utilities.h
media/: diagrams.vsdx
mkr1000/: mqttobd2_1.ino
